--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 *{
     margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 body{
@@ -56,7 +58,72 @@ body{
 
 .logo{
     height: 50px;
-    top: 20px;
-    left: 0px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.logo:hover{
+    background-color: gold;
+}
+
+nav{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    background-color: pink;
+}
+
+.burger{
+    margin-right: 50px;
+}
+
+.navLinks{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: absolute;
+    right: 0px;
+    height: 90vh;
+    top: -90vh;
+    background-color: pink;
+    align-items: center;
+    width: 20%;
+    translate: all 1s;
+}
+
+.navActive{
+    transform: translateY(100vh);
+}
+
+.navLinks li{
+    list-style: none;
+}
+
+.navLinks a{
+    color: red;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: blue;
+    margin: 5px;
+    border-radius: 10%;
+    translate: all .3s;
+}
+
+.toggle .line1{
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2{
+    opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px, -6px);
 }
