--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,6 @@ body{
     "f f f"
 }
 
-
-
-.f{
-    grid-area: f;
-    background: white;
-    opacity: .0;
-}
-
 .logo{
     height: 50px;
     position: absolute;
@@ -40,7 +32,8 @@ body{
 }
 
 .logo:hover{
-    background-color: gold;
+    background: linear-gradient(135deg, rgba(221,8,144,1), rgba(76, 0, 130, 0.747), rgba(221,8,144,1));
+    opacity: .9;
 }
 
 nav{
@@ -70,9 +63,10 @@ nav{
     top: -90vh;
     background-color: pink;
     align-items: center;
-    width: 20%;
+    width: 25%;
     translate: all 1s;
     z-index: 1;
+    transition: 1.5s;
 }
 
 .navActive{
@@ -84,7 +78,7 @@ nav{
 }
 
 .navLinks a{ /*bilder, kontakter, övrigt, hem*/
-    color: green;
+    color: black;
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
@@ -94,7 +88,7 @@ nav{
 .burger div{ /*krysset*/
     width: 25px;
     height: 3px;
-    background-color: blue;
+    background-color: rgba(76, 0, 130, 0.747);
     margin: 5px;
     border-radius: 10%;
     translate: all .3s;
@@ -112,31 +106,41 @@ nav{
 
 .h{
     grid-area: h;
-    background: white;
+    background: green;
+    opacity: .0;
+}
+.na{
+    grid-area: na;
+    background: black;
     opacity: .0;
 }
 .s1{
     grid-area: s1;
-    background: white;
+    background: yellow;
     opacity: .0;
 }
 .s2{
     grid-area: s2;
-    background: white;
+    background: blue;
     opacity: .0;
 }
 .s3{
     grid-area: s3;
-    background: white;
+    background: grey;
     opacity: .0;
 }
 .s4{
     grid-area: s4;
     background: white;
-    opacity: .8;
+    opacity: .0;
+}
+.f{
+    grid-area: f;
+    background: orange;
+    opacity: .0;
 }
 
-@media screen and (max-width: 479px){
+@media screen and (min-width: 579px){ /*479 kanske*/
     body{
         background: linear-gradient(45deg, rgba(221,8,144,1), rgba(75,0,130,1));
     }
@@ -149,5 +153,22 @@ nav{
         "s4 s4 s4 s4"
         "f f f f"
         ;
+    }
+    .burger{
+        display: none;
+    }
+    .navLinks{ /*rosa sido-bar*/
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        position: fixed;
+        right: 0px;
+        height: 60px;
+        top: 0vh;
+        background-color: pink;
+        align-items: center;
+        width: 60%;
+        translate: all 1s;
+        z-index: 1;
     }
 }
