--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,10 @@ a:visited{
     animation: slide 10s infinite;
 }*/
 
-
+.signup{
+    /*här ska jag lägga länk till sida 3 boka*/
+    /*background: url(sida_3_mitt_konto.html);*/
+}
 
 * {box-sizing: border-box}
 /* Full-width input fields */
@@ -310,27 +313,30 @@ input[type=text]:focus, input[type=password]:focus{
   outline: none;
 }
 button{ /*Box med skapa på*/
-  background-color: greenyellow;
+  background-color: pink;
   color: black;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 0px 0;
   border: none;
   cursor: pointer;
   width: 100%;
+  height: 50%;
   opacity: 0.9;
-  text-emphasis-style: ;
+  text-emphasis-style: 0; /*gör "skapa" texten centrerad*/
+  font-weight: bolder;
 }
 button:hover{
-  opacity:1;
+  opacity: 1;
 }
 /*Style för cancel button*/
 .cancelbtn{
   padding: 14px 20px;
-  background-color: red;
+  background-color: darkred;
 }
 .cancelbtn, .signupbtn{
   float: left;
   width: 50%;
+  margin: 10px 0px;
 }
 .container{
   padding: 16px;
@@ -346,7 +352,7 @@ button:hover{
   height: 100%;
   overflow: auto;
   background-color: #474e5d;
-  padding-top: 50px;
+  padding-top: 10px; /*ser snyggt ut*/
 }
 /*Skapa konto box*/
 .modal-content{
@@ -380,5 +386,42 @@ hr{
 @media screen and (max-width: 579px){ /*300 innan, båda funkar*/
   .cancelbtn, .signupbtn{
     width: 100%;
+  }
+  .modal{
+    display: none;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #474e5d;
+    padding-top: 10px; /*ser snyggt ut*/
+  }
+  .modal-content{
+    background-color: none;
+    margin: 5% auto 15% auto;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  button{ /*Box med skapa på*/
+    background-color: greenyellow;
+    color: black;
+    padding: 14px 20px;
+    margin: 100px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+    text-emphasis-style: 0; /*gör "skapa" texten centrerad*/
+    font-weight: bolder;
+    margin: 10px 0px; /*denna är beroende av "button margin: 100px....... fuck."*/
+  }
+  .cancelbtn, .signupbtn{
+    float: left;
+    width: 100%;
+    font-weight: bolder;
+    /*margin: -100px 0px;*/
   }
 }
