--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
     /*background: linear-gradient(135deg, rgba(221,8,144,1), rgba(75,0,130,1));*/
     background: linear-gradient(135deg, #274046, #000000);
+    overflow: hidden;
 }
 
 .gridwrapper{
@@ -50,33 +51,30 @@ nav{
     width: 20vw;
     /*background-color: yellow;*/
 }
+.nav2{
+    grid-area: na;
+    display: flex;
+    position: absolute;
+    right: 0px;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    width: 20vw;
+    /*background-color: yellow;*/
+}
 
 .burger{
     margin-right: 0px;
-    position: absolute;
+    top: 0px; /*ÄNDRA HÖJDEN HÄR*/
+    position: relative;
+}
+.burger2{
+    margin-right: 0px;
+    top: -400px; /*ÄNDRA HÖJDEN HÄR*/
+    position: relative;
 }
 
-/*Bokning där nere*/
-.bokning{
-    margin-right: 0px;
-    position: fixed;
-    display: flex;
-    bottom: 50px;
-    grid-area: f;
-    background-color: green;
-}
-/*.bokningNav{
-    display: flex;
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    background-color: pink;
-    align-items: center;
-    height: 70px;
-    width: 100vw;
-    z-index: 2;
-    bottom: -15px;
-}*/ Denna är rosa bar där nere, men den e onödig
+
 .bokningLinks{ /*Bokning text*/
     display: flex;
     flex-direction: row;
@@ -108,23 +106,57 @@ nav{
     right: 0px;
     height: 90vh;
     top: -90vh;
-    background-color: #274046;
+    right: 0px; /*ligger längre ut från högersidan*/
+    background-color: rgba(76, 0, 130, 1);; /*fräsig, för den är genomskinlig*/
     align-items: center;
     width: 25%;
     translate: all 1s;
     z-index: 1;
     transition: 1.5s;
+    text-emphasis: 1;
+    text-emphasis-style: 0;
+}
+.navLinks2{ /*fd. "rosa sido-bar"*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: fixed;
+    right: 0px;
+    height: 90vh;
+    top: -90vh;
+    right: 0px; /*ligger längre ut från högersidan*/
+    background-color: rgba(76, 0, 130, 1);; /*fräsig, för den är genomskinlig*/
+    align-items: center;
+    width: 25%;
+    translate: all 1s;
+    z-index: 1;
+    transition: 1.5s;
+    text-emphasis: 1;
+    text-emphasis-style: 0;
 }
 
 .navActive{
+    transform: translateY(100vh);
+}
+.nav2Active{
     transform: translateY(100vh);
 }
 
 .navLinks li{
     list-style: none;
 }
+.navLinks2 li{
+    list-style: none;
+}
 
 .navLinks a{ /*bilder, kontakter, övrigt, hem*/
+    color: black;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 20px;
+}
+.navLinks2 a{ /*bilder, kontakter, övrigt, hem*/
     color: black;
     text-decoration: none;
     letter-spacing: 3px;
@@ -139,27 +171,47 @@ nav{
     margin: 5px;
     border-radius: 10%;
     translate: all .3s;
+    top: 0px;
+    position: relative;
+}
+.burger2 div{ /*krysset*/
+    width: 25px;
+    height: 3px;
+    background-color: rgba(76, 0, 130, 0.747);
+    margin: 5px;
+    border-radius: 10%;
+    translate: all .3s;
+    top: 0px;
+    position: relative;
 }
 
 .toggle .line1{
     transform: rotate(-45deg) translate(-5px, 6px);
 }
+.toggle .line4{
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
 .toggle .line2{
+    opacity: 0;
+}
+.toggle .line5{
     opacity: 0;
 }
 .toggle .line3{
     transform: rotate(45deg) translate(-5px, -6px);
 }
+.toggle .line6{
+    transform: rotate(45deg) translate(-5px, -6px);
+}
 
 .h{
     grid-area: h;
-    background: green;
-    opacity: .0;
+    opacity: 1;
 }
 .na{
     grid-area: na;
     background: black;
-    opacity: .0;
+    opacity: 1;
 }
 .s1{
     grid-area: s1;
@@ -169,18 +221,17 @@ nav{
 }
 .s2{
     grid-area: s2;
-    background: blue;
-    opacity: .0;
+    opacity: 1;
+    color: white;
+    margin-left: 15px;
 }
 .s3{
     grid-area: s3;
-    background: grey;
-    opacity: .0;
+    opacity: 1;
 }
 .s4{
     grid-area: s4;
-    background: white;
-    opacity: .0;
+    opacity: 1;
 }
 .f{
     grid-area: f;
@@ -209,6 +260,9 @@ nav{
     .burger{
         display: none;
     }
+    .burger2{
+        display: none;
+    }
     .navLinks{ /*rosa sido-bar*/
         display: flex;
         flex-direction: row;
@@ -222,6 +276,22 @@ nav{
         width: 60%;
         translate: all 1s;
         z-index: 1;
+        text-emphasis-style: 0;
+    }
+    .navLinks2{ /*rosa sido-bar*/
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        position: fixed;
+        right: 0px;
+        height: 60px;
+        top: 0vh;
+        background-color: #274046;
+        align-items: center;
+        width: 60%;
+        translate: all 1s;
+        z-index: 1;
+        text-emphasis-style: 0;
     }
     /*.bokningLinks{ Bokning text
         display: flex;
@@ -234,6 +304,37 @@ nav{
         font-weight: bolder;
     }*/
     /*MITT KONTO*/
+
+    .switch { /*toggle saken*/
+        display: none;
+      }
+    .slider {
+        display: none;
+    }
+    .kontoP2{
+        opacity: 0;
+    }
+
+    .button2{ /*BOKA!*/
+        background-color:  pink;
+        color: black;
+        padding: 14px 20px;
+        margin: 0px 0;
+        border: none;
+        cursor: pointer;
+        width: 160px; /*100*/
+        height: 50%; /*50*/
+        opacity: .9;
+        text-emphasis-style: 0; /*gör "skapa" texten centrerad*/
+        font-weight: bolder;
+        top: -20px; /*ÄNDRA HÖJDEN HÄR*/
+        position: relative;
+    }
+    #checkboxSkapa{ /*SKALL VARA KVAR*/
+        position: fixed;
+        top: 465px;
+        left: 10px;
+    }
 
 }
 
@@ -283,15 +384,35 @@ button{ /*Box med skapa på*/
   margin: 0px 0;
   border: none;
   cursor: pointer;
-  width: 100%;
-  height: 50%;
-  opacity: 0.9;
+  width: 100%; /*100*/
+  height: 50%; /*50*/
+  opacity: .9;
   text-emphasis-style: 0; /*gör "skapa" texten centrerad*/
   font-weight: bolder;
+  top: 0px; /*ÄNDRA HÖJDEN HÄR*/ /*-400px*/
+  position: relative;
 }
+.skapaKonto{ /*Box med skapa på*/
+    background-color: pink;
+    color: black;
+    padding: 14px 20px;
+    margin: 0px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%; /*100*/
+    height: 50%; /*50*/
+    opacity: .9;
+    text-emphasis-style: 0; /*gör "skapa" texten centrerad*/
+    font-weight: bolder;
+    top: 300px; /*ÄNDRA HÖJDEN HÄR*/ /*-400px*/
+    position: relative;
+  }
+
+
 button:hover{
   opacity: 1;
 }
+
 /*Style för cancel button*/
 .cancelbtn{
   padding: 14px 20px;
@@ -321,9 +442,9 @@ button:hover{
 /*Skapa konto box*/
 .modal-content{
   background-color: none;
-  margin: 5% auto 15% auto;
+  margin: 12% auto 10% auto;
   border: 1px solid #888;
-  width: 80%;
+  width: 100%;
 }
 hr{
   border: 1px solid #f1f1f1;
@@ -347,13 +468,15 @@ hr{
   clear: both;
   display: table;
 }
+
+
 @media screen and (max-width: 579px){ /*300 innan, båda funkar*/
   .cancelbtn, .signupbtn{
     width: 100%;
   }
   .modal{
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
@@ -382,6 +505,8 @@ hr{
     font-weight: bolder;
     color: white;
     margin: 0px 0px; /*denna är beroende av "button margin: 100px....... fuck."*/
+    display: grid;
+    grid-area: h;
   }
   .cancelbtn, .signupbtn{
     float: left;
@@ -389,7 +514,93 @@ hr{
     font-weight: bolder;
     /*margin: -100px 0px;*/
   }
+
+  .btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    position: fixed;
+    right: 0px;
+    height: 60px;
+    top: 500px;
+    background-color: #274046;
+    align-items: center;
+    width: 60%;
 }
+  
+  /* On mouse-over */
+.btn:hover {
+    background: #eee;
+    opacity: .5;
+}
+  
+.success {
+    color: green;
+    top: 175px;
+    left: -300px;
+}
+.info {
+    color: dodgerblue;
+    top: 195px;
+    left: -300px;
+}
+.warning {color: orange;}
+.danger {color: red;}
+.default {color: black;}
+
+.bokaPrinter{
+    background-color: none;
+    margin: 5% auto 15% auto;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    justify-content: space-evenly;
+    color: white;
+}
+input {
+    float: right;
+    margin: 5px 0px;
+    width: 300px;
+    height: 20px;
+    position: relative;
+    right: 0px;
+    top: 26px;
+}
+.clear {
+    clear: both;
+}
+.boka-knapp{
+    width: 160px;
+}
+
+
+
+.button2{ /*BOKA!*/
+    background-color:  rgba(76, 0, 130, 0.747);
+    color: black;
+    padding: 14px 20px;
+    margin: 0px 0;
+    border: none;
+    cursor: pointer;
+    width: 160px; /*100*/
+    height: 50%; /*50*/
+    opacity: .9;
+    text-emphasis-style: 0; /*gör "skapa" texten centrerad*/
+    font-weight: bolder;
+    top: 0px; /*ÄNDRA HÖJDEN HÄR*/
+    position: relative;
+  }
+
+  #checkboxSkapa{ /*telefon*/
+    position: fixed;
+    top: 405px;
+    left: 50px;
+}
+
+
+
+} /*SLUTET PÅ MEDIASCREEN*/
 
 .social_media_links{
     list-style: none;
@@ -403,6 +614,7 @@ hr{
     right: 0;
     bottom: 0px;
 }
+
 /*Cirklar med social_media_länkar i*/
 .circles{
     display: flex;
@@ -411,7 +623,7 @@ hr{
     position: fixed;
     right: 0px;
     height: 60px;
-    bottom: 40px;
+    bottom: 20px;
     align-items: center;
     width: 100%;
     text-align: center;
@@ -420,7 +632,7 @@ hr{
     border: 2px solid black;
     background: ffffff;
     width: 100px;
-    height: 50px;
+    height: 30px;
     border-radius: 100%;
     display: inline-block;
     line-height: 6vh;
@@ -429,7 +641,7 @@ hr{
     border: 2px solid black;
     background: ffffff;
     width: 100px;
-    height: 50px;
+    height: 30px;
     border-radius: 100%;
     display: inline-block;
     line-height: 6vh;
@@ -438,8 +650,167 @@ hr{
     border: 2px solid black;
     background: ffffff;
     width: 100px;
-    height: 50px;
+    height: 30px;
     border-radius: 100%;
     display: inline-block;
     line-height: 6vh;
 }
+
+/**/
+/**/
+/**/
+/**/
+
+p, label {
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+input {
+    margin: .4rem;
+}
+.bokning_box{
+    display: flex;
+    flex-direction: column;
+    grid-area: s2;
+}
+.booking_box_text{
+    grid-area: s2;
+}
+
+  
+.success {
+    color: green;
+}
+
+.modal-content{
+    color: white;
+}
+
+/*välja tid för att printa*/
+.bokaPrinter{
+    background-color: none;
+    margin: 5% auto 15% auto;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    justify-content: space-evenly;
+    color: white;
+}
+input {
+    float: right;
+    margin: 5px 0px;
+    width: 300px;
+    height: 20px;
+    position: relative;
+    right: 0px;
+    top: 26px; /*checkbox är exakt bredvid nu*/
+}
+.boka-knapp{
+    width: 160px;
+}
+
+.ruta{ /*ruta = fältet där man skriver sin input i form av mail och lösen*/
+    top: 5px;
+}
+.kontoP{
+    top: 100px;
+    left: 15px;
+    position: relative;
+    display: flex;
+    top: 150px;
+    font-size: 14px;
+    color: #F0FFF0;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'cambria';
+}
+.kontoP2{
+    top: 100px;
+    left: 15px;
+    position: relative;
+    display: flex;
+    top: 150px;
+    font-size: 14px;
+    color: #F0FFF0;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+    font-family: 'cambria';
+}
+.kontoP3{
+    top: 100px;
+    left: 15px;
+    position: relative;
+    display: flex;
+    top: 150px;
+    font-size: 14px;
+    color: #F0FFF0;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+    font-family: 'cambria';
+}
+
+
+/**/
+/**/
+/**/
+
+.switch { /*ändra position på den, sammlingsnamnet*/
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    top: -325px;
+    right: -130px;
+  }
+  
+  .switch input { /*input*/
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider { /*slide*/
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before { /*innan*/
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: rgb(68, 154, 224);
+  }
+
+  input:checked + .slider:before { /*för att den skall funka, funktioner*/
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  .slider.rund {
+    border-radius: 34px;
+  }
+  
+  .slider.rund:before {
+    border-radius: 50%;
+  }
